# cmake-project-template

./: CMakeLists.txt  README.md
src/: main.cpp
src/tools/: CMakeLists.txt
tests/: CMakeLists.txt  MathTest.cpp  hello_test.cpp
